--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-# Server
 server.port=8080
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
-# MongoDB (Using MongoDB Atlas - Free Cloud Database)
-spring.data.mongodb.uri=mongodb+srv://hitenvaid3837_db_user:hiten1548@festro.at35kyz.mongodb.net/hospital_er?retryWrites=true&w=majority&appName=Festro
-
-# For local MongoDB (if installed)
-# spring.data.mongodb.host=localhost
-# spring.data.mongodb.port=27017
-# spring.data.mongodb.database=hospital_er
+# Load secret properties from external file
+spring.config.import=optional:file:./application-secret.properties[.properties]
+# Also support .env file
+spring.config.import=optional:file:.env[.properties]
